--- a/app/src/main/res/layout/rename.xml
+++ b/app/src/main/res/layout/rename.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter new name"
+        android:selectAllOnFocus="true"
         android:id="@+id/newName" />
 
     <Button
