--- a/app/src/main/res/menu/document_bottom_menu.xml
+++ b/app/src/main/res/menu/document_bottom_menu.xml
@@ -6,7 +6,7 @@
         android:icon="@drawable/delete_24dp"
         app:showAsAction="always"/>
 
-    <item android:id="@+id/cut"
+    <!--<item android:id="@+id/cut"
         android:title="Cut"
         android:icon="@drawable/cut_24dp"
         app:showAsAction="ifRoom"/>
@@ -19,6 +19,6 @@
     <item android:id="@+id/save_to_gallery"
         android:title="Save to Gallery"
         android:icon="@drawable/save_to_gallery_24dp"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"/>-->
 
 </menu>
