--- a/app/src/main/res/layout/image_viewer.xml
+++ b/app/src/main/res/layout/image_viewer.xml
@@ -7,7 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/violet"
-        android:id="@+id/imageViewerToolbar">
+        android:id="@+id/imageViewerToolbar"
+        style="@style/dotColor">
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
