--- a/app/src/main/res/menu/image_viewer_menu.xml
+++ b/app/src/main/res/menu/image_viewer_menu.xml
@@ -7,14 +7,14 @@
         android:icon="@drawable/crop_36dp"
         app:showAsAction="always"/>
 
-    <!--<item android:id="@+id/retake"
+    <item android:id="@+id/retake"
         android:title="Retake"/>
 
-    <item android:id="@+id/pageName"
-        android:title="Page Name"/>
+    <!--<item android:id="@+id/pageName"
+        android:title="Page Name"/>-->
 
     <item android:id="@+id/delete"
-        android:title="Delete"/>-->
+        android:title="Delete"/>
 
 
 </menu>
