--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="color">#A54D12</color>
     <color name="violet">#3F51B5</color>
+    <color name="white">#FFFF</color>
 
 </resources>
