--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="dotColor">
+        <item name="android:textColorSecondary">@color/white</item>
+    </style>
+
     <style name="horizontal_style">
         <item name="android:orientation">horizontal</item>
     </style>
