--- a/app/src/main/res/menu/document_bottom_menu.xml
+++ b/app/src/main/res/menu/document_bottom_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item android:id="@+id/move_to_folder"
+        android:title="Move to folder"
+        android:icon="@drawable/move_to_folder_white_24dp"
+        app:showAsAction="always"/>
+
     <item android:id="@+id/save_to_gallery"
         android:title="Save to Gallery"
         android:icon="@drawable/save_to_gallery_24dp"
@@ -11,12 +16,7 @@
         android:icon="@drawable/delete_24dp"
         app:showAsAction="always"/>
 
-    <!--<item android:id="@+id/cut"
-        android:title="Cut"
-        android:icon="@drawable/cut_24dp"
-        app:showAsAction="ifRoom"/>
-
-    <item android:id="@+id/copy"
+    <!--<item android:id="@+id/copy"
         android:title="Copy"
         android:icon="@drawable/copy_24dp"
         app:showAsAction="ifRoom"/>
